@@ -9,6 +9,7 @@ Cacti CHANGELOG
 -issue#1097: When copying template user, enable that user, also template users should be disabled by default
 -issue#1174: Disable drag and drop when tree is not in edit mode
 -issue: Move Graph removal function to Graph API
+-issue#1414: DSSTATS reports incorrectly that a data source does not exist
 -feature: Make Graph and Data Source suggested naming more efficient
 -feature: Make tree editing responive
 -feature: Add support for DDERIVE and DCOUNTER to Cacti
